src/objects/sked_Support_Guidance__c.object
<CustomObject>
    <fields>
        <fullName>sked_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Guidance_Information__c</fullName>
        <label>Guidance Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipLabel>Support Guidance</relationshipLabel>
        <relationshipName>sked_Support_Guidance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked_Time_Delivered__c</fullName>
        <label>Time Delivered</label>
        <type>Time</type>
    </fields>
    <label>Support Guidance</label>
    <nameField>
        <label>Support Guidance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Guidance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>